fixed small typo

--- a/mortality-model.ipynb
+++ b/mortality-model.ipynb
@@ -2156,7 +2156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_auc_plot(models, names, title, X, y, save_name=None):\n",
+    "def gen_auc_plot(models, names, title, X, y):\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    for i, model in enumerate(models):\n",
     "        f_hat = model.predict_proba(X)\n",
@@ -2168,7 +2168,7 @@
     "    plt.ylabel('Sensitivity')\n",
     "    plt.title(title)\n",
     "    \n",
-    "def gen_calib_plot(models, names, title, X, y, save_name=None):\n",
+    "def gen_calib_plot(models, names, title, X, y):\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    for i, model in enumerate(models):\n",
     "        f_hat = model.predict_proba(X)\n",
@@ -2179,7 +2179,7 @@
     "    plt.ylabel('Actual Probability of Outcome')\n",
     "    plt.title(title)\n",
     "    \n",
-    "def gen_prc_plot(models, names, title, X, y, save_name=None):\n",
+    "def gen_prc_plot(models, names, title, X, y):\n",
     "    plt.figure(figsize=(10, 10))\n",
     "    for i, model in enumerate(models):\n",
     "        f_hat = model.predict_proba(X)\n",
