--- a/mortality-model.ipynb
+++ b/mortality-model.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Building an Illness Severity Score Model with xgBoost\n",
-    "## Milan Datathon Demonstration\n",
+    "## ESICM’s Big Datatalk\n",
     "### C.V. Cosgriff, MIT Critical Data\n",
     "\n",
     "In this notebook we will go through the steps of building a simple illness severity score model with `xgBoost` using data extracted from the MIMIC-III database. For more about `xgBoost` please see:  _XGBoost: A Scalable Tree Boosting System, arXiv:1603.02754 [cs.LG]_. Our model will use the first ICU stay of the first hospital stay for all patients in the MIMIC-III database age $\\geq$ 16 with a length of stay $\\gt$ 4h and will be trained on the outcome of __in-hospital mortality__. The model will use information from recorded vital signs, laboratory data, and intervention administration.\n",
